[workspace]

members = [
    "creational/builder",
    "creational/factory",
    "creational/abstract_factory",
    "creational/singleton",
    "creational/prototype",



    "behaviour/state",
    "behaviour/flyweight",
    "behaviour/chain_of_responsibility",
    "behaviour/mediator",
    "behaviour/iterator",
    
    
    
    "structural/decorator",
    "structural/adapter",
    "structural/facade",
    "structural/bridge"
]
